// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the generated schema detects invalid inputs as invalid (0) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "errors": Array [
        "Missing required field.",
      ],
      "nested": Object {
        "email": Processed {
          "errors": Array [
            "Missing required field.",
          ],
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (1) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "errors": Array [
        "Missing required field.",
      ],
      "nested": Object {
        "email": Processed {
          "errors": Array [
            "Missing required field.",
          ],
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (2) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "nested": Object {
        "email": Processed {
          "errors": Array [
            "String is not a valid email.",
          ],
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (3) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "nested": Object {
        "anInteger": Processed {
          "errors": Array [
            "Not a valid integer.",
          ],
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (4) 1`] = `
Processed {
  "nested": Object {
    "bs": Processed {
      "errors": Array [
        "Not an array.",
      ],
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (5) 1`] = `
Processed {
  "nested": Object {
    "as": Processed {
      "nested": Object {
        "0": Processed {
          "nested": Object {
            "email": Processed {
              "errors": Array [
                "Missing required field.",
              ],
            },
          },
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (6) 1`] = `
Processed {
  "nested": Object {
    "bs": Processed {
      "nested": Object {
        "0": Processed {
          "nested": Object {
            "a": Processed {
              "errors": Array [
                "Missing required field.",
              ],
              "nested": Object {
                "email": Processed {
                  "errors": Array [
                    "Missing required field.",
                  ],
                },
              },
            },
            "dangling": Processed {
              "errors": Array [
                "Unexpected key.",
              ],
            },
          },
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid with a scope supplied (0) 1`] = `
Processed {
  "nested": Object {
    "as": Processed {
      "errors": Array [
        "Unexpected key.",
      ],
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid with a scope supplied (1) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "nested": Object {
        "anInteger": Processed {
          "errors": Array [
            "Unexpected key.",
          ],
        },
      },
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid with a scope supplied (2) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "nested": Object {
        "email": Processed {
          "errors": Array [
            "String is not a valid email.",
          ],
        },
      },
    },
  },
}
`;

exports[`the generated schema detects valid inputs as valid with a scope supplied (0) 1`] = `
Processed {
  "value": Object {
    "a": Object {
      "email": "test@example.com",
    },
    "bs": Array [
      Object {
        "a": Object {
          "email": "some@example.com",
        },
        "bs": Array [],
      },
    ],
  },
}
`;

exports[`the generated schema detects valid inputs as valid with a scope supplied (1) 1`] = `
Processed {
  "value": Object {
    "a": Object {
      "email": "foo@example.com",
    },
    "bs": Array [],
  },
}
`;

exports[`throws an error if decorated incorrectly 1`] = `"Decorated property of type array without specifying @specify after @is."`;

